# machine-learning-and-more

./: .gitignore  README.md  myst.yml  pyproject.toml
.github/workflows/: deploy.yml  publish_notebooks.yml
bayesian_data_analysis/chapter2/: example1.ipynb  exercise13.csv  exercise13.ipynb
bayesian_data_analysis/chapter3/: example1.csv  exercise2.ipynb  exercise8.ipynb
bayesian_data_analysis/chapter5/: example2.ipynb  exercise13.ipynb
projects/: _config.yml  _toc.yml  index.md  resume.md
projects/bayesian_statistics/: index.md
projects/bayesian_statistics/tutorials/: conversion_rate.ipynb  flux_across_surface.ipynb  metropolis_hastings.ipynb  systolic_blood_pressure.ipynb  transformations_of_random_variables.ipynb  volume_of_cube.ipynb
projects/optimization/: README.md
projects/reinforcement_learning/: index.md
projects/statistical_inference/: README.md
reinforcement_learning/RL4Finance/: README.md  stock_process3.py
reinforcement_learning/RL4Finance/assignment2/: frog_puzzle.py  snakes_and_ladders.py  snakes_and_ladders1.py  snakes_and_ladders2.py
reinforcement_learning/RL4Finance/chapter2/: probability_distributions.py
reinforcement_learning/RL4Finance/chapter3/: bicycle_inventory.py  bicycle_inventory2.py  bicycle_inventory3.py  stock_dynamics.py  (+4 more)
tutorials/: flux_across_surface.ipynb  systolic_blood_pressure.ipynb  volume_of_cube.ipynb
tutorials/hf_readmissions/: hf_readmissions.csv  modeling.ipynb
tutorials/manufacturing_efficiency/: manufacturing_efficiency.ipynb
tutorials/subscription_renewal/: subscription_renewal.ipynb
(+46 files in other folders)
