[project]
name = "machine-learning-and-more"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jupyter-book>=2.0.0a0",
    "loguru>=0.7.3",
    "numpy>=2.2.5",
    "scipy>=1.15.3",
]

[project.optional-dependencies]
bayesian = [
    "pymc>=5.26.1",
]
ml = [
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
]
plotting = [
    "matplotlib>=3.10.7",
    "plotly>=6.5.0",
    "seaborn>=0.13.2",
]
data = [
    "pandas>=2.3.3",
    "polars>=1.35.1",
]
